# context-engineering-xslt

./: .env.example  CLAUDE.md  INITIAL.md  README.md  TASK.md  behave.ini  main.py  pyproject.toml
.claude/: settings.local.json
PRPs/: dispatch-sync-xslt-mapping.md  xsd-fragment-extraction-mcp.md  xslt-field-mappings-initial.md  xslt-field-mappings.md
examples/: Ex2_Mapping.xsl  Ex3_Mapping.xsl  Ex5_Mapping.xsl  I403_Mapping.xsl  I405_ZRDA_V2.xsl  I407_GoodsReceipt_AstroFI_ECC.xsl  example_input_output.md
src/: __init__.py  dispatch_mapping.xsl  fragment_extractor.py  mapping.xsl  schema_loader.py  server.py  tools.py
tests/: conftest.py
tests/features/: dispatch_mappings.feature  field_mappings.feature  xsd_fragment_extraction.feature
tests/fixtures/: edge_case_no_partner.xml  edge_case_wrong_partner.xml  source_delvry07_full.xml  source_empty_elements.xml  source_idoc.xml  source_no_bolnr.xml  source_no_charg.xml  source_no_exidv2.xml
tests/steps/: dispatch_steps.py  xsd_steps.py  xslt_steps.py
tests/test_data/: expected_output.xml  source_sample.xml
xsd/: Element.xsd  PartSync_0100.xsd  Segment.xsd
